# testinstall

./: setup.cfg
